<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MenuPrincipal">

    <TextView
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/opensans_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_fileName="principal.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/BtnReconocer"
        android:text="@string/BtnReconocer"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/opensans_bold"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/BtnAcercaDe"
        android:text="@string/BtnAcercaDe"
        android:fontFamily="@font/opensans_bold"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/BtnSalir"
        android:text="@string/BtnSalir"
        android:fontFamily="@font/opensans_bold"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>